# Tous-mes-projets-42

./: README.md
Avaj-Launcher/: README.md
BADASS/: README.md
BADASS/P1/: README.md
BADASS/P2/: README.md  config.sh  host_jbertin-2.conf  mandatory_tests.sh  routeur_jbertin-1.conf
BADASS/P3/: README.md  host_jbertin-2.conf  mandatory_tests.sh  p3.gns3project  routeur_jbertin-1.conf  routeur_jbertin-2.conf  routeur_jbertin-4.conf
Born2beroot/: README.md
Computor-v1/: README.md
Computor-v1/sources/: Parser.cpp  Polynom.cpp  main.cpp
FdF/: README.md
FdF/includes/: fdf.h
FdF/libft/: Makefile
FdF/sources/: ft_camera.c  ft_hooks.c  ft_parser.c  ft_projection.c
FdF/sources_bonus/: ft_camera_bonus.c  ft_controllers_bonus.c  ft_map_bonus.c  ft_projection_bonus.c
Inception/: README.md
Inception-of-Things/: install-vagrant.sh
Inception-of-Things/p2/: Vagrantfile
Libasm/: README.md
Libasm/srcs/: ft_strcmp.s  ft_strcpy.s  ft_strlen.s
Libasm/tests/: test.txt
NetPractice/: README.md  level1.json  level10.json  level2.json  level5.json  level6.json  level7.json
Philosophers/: README.md
Philosophers/philo/: Makefile
Piscines/Piscine-C/: README.md
Piscines/Piscine-Cpp/: .gitignore  README.md
Projets/Avaj-Launcher/: .gitignore  Makefile
Projets/BADASS/: README.md  explications.txt
Projets/Born2beroot/: monitoring.sh  signature.txt
Projets/Computor-v1/: CMakeLists.txt  Makefile
Projets/Computor-v1/includes/: computorv1.h
Projets/Computor-v1/sources/: Solver.cpp
Projets/Darkly/: README.md
Projets/FdF/: .gitignore  Makefile
Projets/Inception/: Makefile
Projets/Inception-of-Things/: README.md  explications.txt
Projets/NetPractice/: .gitignore  README.md  level3.json  level4.json  level8.json  level9.json
Projets/Philosophers/: .gitignore
Projets/Rainfall/: README.md
Projets/Scop/: README.md  generate_includes.sh  generate_sources.sh
Projets/Snowcrash/: exploit.sh
Projets/ft_containers/: Makefile  main.cpp
Projets/ft_linear_regression/: README.md
Projets/ft_ping/: .gitignore  README.md
Projets/ft_printf/: .gitignore  README.md  ft_display_char.c  ft_display_decimal.c  ft_display_integer.c  ft_display_string.c  ft_display_udecimal.c  ft_printf.c  ft_printf.h  ft_putunbr_base_fd.c
Projets/ft_transcendence/: .gitignore  Makefile
Projets/get_next_line/: .gitignore  README.md  get_next_line.h
Projets/libasm/: Makefile
Projets/libft/: .gitignore  Makefile  README.md  ft_isprint.c  ft_lstadd_back_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_memccpy.c  ft_memcmp.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strncmp.c  ft_substr.c
Projets/minishell/: README.md
Projets/minitalk/: .gitignore  Makefile  README.md
Projets/nm/: .gitignore  Makefile  README.md
Projets/push_swap/: README.md
Projets/zappy/: CMakeLists.txt  Makefile  run-gfx.sh
Projets/zappy/Sources/Client/: CMakeLists.txt  pch.hpp
Projets/zappy/Sources/Client/src/: Client.hpp  LevelGrid.hpp  Pathfinding.hpp  main.cpp
Projets/zappy/Sources/Common/: CMakeLists.txt
Projets/zappy/Sources/Common/src/: Console.hpp  Tile.hpp  Utils.cpp
Projets/zappy/Sources/Common/src/Network/: Response.hpp  Socket.hpp
Projets/zappy/Sources/GraphicClient/: pch.hpp
Projets/zappy/Sources/GraphicClient/src/: PanelBuilder.hpp
Projets/zappy/Sources/GraphicClient/src/OpenGL/: Image.hpp  Window.hpp
Projets/zappy/Sources/GraphicClient/src/Threads/: OpenGLThread.cpp  OpenGLThread.hpp  SocketThread.cpp
Projets/zappy/Sources/Server/src/: Clock.cpp  CommandSummary.hpp  Server.cpp  main.cpp
Projets/zappy/Sources/Server/src/Commands/: AvanceCommand.hpp  Command.hpp  ExpulseCommand.hpp  ForkCommand.hpp  GraphicCommand.hpp  IncantationCommand.hpp  InventaireCommand.hpp  PoseCommand.hpp  PrendCommand.hpp
Projets/zappy/Sources/Server/src/Game/: Client.cpp  Client.hpp  Game.cpp  Game.hpp  Map.cpp  PerlinNoise.hpp  Team.cpp
Rainfall/: .gitignore  README.md
Rainfall/bonus0/: source.c  walkthrough.md
Rainfall/bonus1/: walkthrough.md
Rainfall/bonus2/: walkthrough.md
Rainfall/bonus3/: source.c
Rainfall/level0/: source.c
Rainfall/level3/: source.c  walkthrough.md
Rainfall/level4/: walkthrough.md
Rainfall/level5/: source.c  walkthrough.md
Rainfall/level6/: source.c
Rainfall/level7/: source.c
Rainfall/level8/: source.c  walkthrough.md
Rainfall/level9/: source.cpp  walkthrough.md
Scop/: .gitignore  Makefile  README.md
Scop/srcs/: main.cpp
Snowcrash/: README.md
ft_containers/: .gitignore  README.md
ft_containers/includes/: pair.hpp  rbtree_node.hpp  utils.hpp
ft_irc/: .devtool  .gitignore  Makefile  README.md
ft_irc/includes/: Channel.hpp  CommandManager.hpp  Server.hpp  User.hpp  (+2 more)
ft_linear_regression/: .gitignore  README.md
ft_ping/: Makefile
ft_printf/: Makefile  README.md  ft_display_hex.c  ft_display_percent.c  ft_display_ptr.c  ft_putunbr_fd.c
ft_transcendence/: README.md  docker-compose.yaml
get_next_line/: README.md  get_next_line.c  get_next_line_utils.c
libasm/: .gitignore  README.md
libft/: README.md  ft_bzero.c  ft_isalpha.c  ft_lstadd_front_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memmove.c  ft_split.c  ft_strcpy.c  ft_strtrim.c  ft_tolower.c
miniRT/: README.md
minishell/: README.md
minitalk/: README.md
push_swap/: .gitignore  Makefile  README.md
zappy/: .gitignore  README.md  run-clients.sh  run-server.sh
zappy/Sources/GraphicClient/: CMakeLists.txt
zappy/Sources/GraphicClient/src/: GlobalContext.hpp  GraphicClient.cpp  GraphicClient.hpp  main.cpp
zappy/Sources/GraphicClient/src/OpenGL/: Window.cpp
zappy/Sources/GraphicClient/src/Threads/: SocketThread.hpp  Thread.hpp
zappy/Sources/Server/: CMakeLists.txt  pch.hpp
zappy/Sources/Server/src/: Clock.hpp  CommandManager.hpp  CommandQueue.hpp  Server.hpp
zappy/Sources/Server/src/Commands/: BroadcastCommand.hpp  ConnectNbrCommand.hpp  DroiteCommand.hpp  EquipeCommand.hpp  GaucheCommand.hpp  VoirCommand.hpp
zappy/Sources/Server/src/Game/: Map.hpp  Team.hpp
(+747 files in other folders)
